Closed Bug 1761579 Opened 2 years ago Closed 2 years ago

Fix thread-safety annotations for ReentrantMonitor.h

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox100 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/autoland/rev/3ff7a1b2b3b6
fix thread-safety annotations for ReentrantMonitor r=nika
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: