Bug 1761579: fix thread-safety annotations for ReentrantMonitor r=nika

Differential Revision: https://phabricator.services.mozilla.com/D142149